# irgen

./: .gitignore  .travis.yml  LICENSE.txt  README.rst  irgen.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: python-package.yml
devices/: LOXJIE - IRCODES.txt  SMSL - IRCODES.txt
src/irgen/: __init__.py  __main__.py  console.py  exceptions.py  raw.py
tests/: test_library.py  test_raw.py
